--- a/angular.json
+++ b/angular.json
@@ -3,9 +3,13 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "shopping-cart": {
+    "restaurantDirectory": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -13,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/shopping-cart",
+            "outputPath": "dist/restaurantDirectory",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -62,18 +66,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "shopping-cart:build"
+            "browserTarget": "restaurantDirectory:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "shopping-cart:build:production"
+              "browserTarget": "restaurantDirectory:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "shopping-cart:build"
+            "browserTarget": "restaurantDirectory:build"
           }
         },
         "test": {
@@ -93,32 +97,19 @@
             "scripts": []
           }
         },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "tsconfig.app.json",
-              "tsconfig.spec.json",
-              "e2e/tsconfig.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
-        },
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "shopping-cart:serve"
+            "devServerTarget": "restaurantDirectory:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "shopping-cart:serve:production"
+              "devServerTarget": "restaurantDirectory:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "shopping-cart"
+  "defaultProject": "restaurantDirectory"
 }
